Fix misalignment of loading-state buttons

--- a/frontend/src/components/form.less
+++ b/frontend/src/components/form.less
@@ -79,6 +79,7 @@
   }
 
   button, .sending {
+    display: block;
     margin: 32px 0 0;
     padding: 8px;
     width: 100%;
