--- a/frontend/src/components/password/PasswordPage.less
+++ b/frontend/src/components/password/PasswordPage.less
@@ -18,6 +18,7 @@
     }
 
     button, .checking {
+      display: block;
       margin: 32px 0 0;
       padding: 8px;
       width: 100%;
